[project]
name            = "leetcodex"
version         = "0.1.0"                    
description     = "CLI tool to run LeetCode solutions locally in six languages"
readme          = "README.md"
requires-python = ">=3.8"
license         = { text = "MIT" }           
authors = [
  { name = "Anupam Kumar", email = "anupamkumar.nith@gmail.com" }
]

keywords = [
  "leetcode", "local","testcase","test", "competitive-programming",
  "sandbox", "docker", "python", "C++"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Operating System :: OS Independent"
]

dependencies = [
  "click>=8.1",
  "pyyaml>=6.0",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "colorama>=0.4"
]

[project.scripts]          # console‑script entry‑points
leet       = "leetcodex.cli:cli"
leetcodex  = "leetcodex.cli:cli"   # aliases
testlc     = "leetcodex.cli:cli"

[project.urls]
Homepage    = "https://github.com/anupam8nith/leetcodex"
Source      = "https://github.com/anupam8nith/leetcodex"
Issues      = "https://github.com/anupam8nith/leetcodex/issues"
Changelog   = "https://github.com/anupam8nith/leetcodex/releases"

[build-system]
requires      = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools]          # optional, but keeps dist clean
package-dir = { "" = "src" }        # adopt a src/ layout later
packages = ["leetcodex"]

[tool.setuptools.packages.find]
where = ["src"]
