[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "leetcodex"
version         = "0.5.0"
description     = "CLI tool to run LeetCode solutions locally in six languages"
readme          = "README.md"
requires-python = ">=3.8"

authors = [
  { name = "Anupam Kumar", email = "anupamkumar.nith@gmail.com" }
]

keywords = ["leetcode","cli","sandbox","competitive-programming","docker","python","cpp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Environment :: Console",
  "Intended Audience :: Education",
  "Topic :: Software Development :: Libraries :: Application Frameworks"
]

dependencies = [
  "click>=8.1",
  "PyYAML>=6.0",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "colorama>=0.4",
  "html2text"
]

[project.scripts]
leet      = "leetcodex.cli:cli"
leetcodex = "leetcodex.cli:cli"
testlc    = "leetcodex.cli:cli"

[tool.setuptools]
packages = ["leetcodex"]

[tool.setuptools.package-data]
"leetcodex" = ["languages.yaml"]
